create_task complete

--- a/todo/templates/create_task.html
+++ b/todo/templates/create_task.html
@@ -3,6 +3,10 @@
 {%block block1%}
 <h1>Task Creation</h1>
 
+{%if error%}
+    <p>{{error}}</p>
+
+{%endif%}
 <form action="" method="POST">
 
     {% csrf_token %}
