Added individual Task show

--- a/todo/templates/create_task.html
+++ b/todo/templates/create_task.html
@@ -1,6 +1,7 @@
-{% extends 'navbar.html'%}
+{% extends 'main.html'%}
 
 {%block block1%}
+
 <h1>Task Creation</h1>
 
 {%if error%}
@@ -15,5 +16,8 @@
     <input type="submit">
 
 </form>
+
+
     
 {% endblock block1%}
+
