--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -1,4 +1,12 @@
+{% extends 'main.html'%}
+
+{%block block1%}
+
 <h1> This is home</h1>
 
 <a href=" {%url 'show_tasks'%} "> TASKS </a>
 <a href="{% url 'create_task'%}"> Create</a>
+
+    
+{% endblock block1%}
+
