--- a/todo/templates/tasks.html
+++ b/todo/templates/tasks.html
@@ -21,7 +21,7 @@
         <td>{{task.important}}</td>
         <td><a href="{% url 'show_task' task.id %}">view</a></td>
         <td><a href="{% url 'update_task' task.id %}">edit</a></td>
-        <td><a href="#">delete</a></td>
+        <td><a href="{% url 'delete_task' task.id %}">delete</a></td>
     </tr>
     {%endfor%}
 </table>
